--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <main>
+        <div class="progress-bar">
+            <div class="progress-bar-fill"></div>
+        </div>
         <div class="content">
             <img src="img/LOGO_ВДК белое классика белая_page-0001.jpg" class="logo">
             <h2 class="element1" id="element1">Раскажем о нашем наборе метчиков WDK-HT0312</h2>
